--- a/.env
+++ b/.env
@@ -4,17 +4,17 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
-NEXTAUTH_SECRET=
+DATABASE_URL="mongodb+srv://raxmatov:raxmatov@cluster0.lcoxoqz.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
-NEXT_PUBLIC_PUSHER_APP_KEY=
-PUSHER_APP_ID=
-PUSHER_SECRET=
+NEXT_PUBLIC_PUSHER_APP_KEY=b1b12b34877ea78a5c97
+PUSHER_APP_ID=1597724
+PUSHER_SECRET=a03847788a6caabf6a19
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dfsyjpouz
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=dc169844ee1cb869406f
+GITHUB_SECRET=231579282cd49b4c99150324a3af428a33a40b65
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=217543309752-apulf7naul2093tjouscnbic1jt2kv8t.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
