--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp",
+  "name": "chatnow",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -48,6 +48,6 @@
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.194",
-    "prisma": "^4.13.0"
+    "prisma": "^4.14.0"
   }
 }
